--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -5,7 +5,7 @@
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PyramidPanic</RootNamespace>
     <AssemblyName>PyramidPanic</AssemblyName>
@@ -110,6 +110,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scorpion\Walkleft.cs" />
+    <Compile Include="Scorpion\Scorpion.cs" />
     <Compile Include="GameScenes\LevelEditorScene\LevelEditorScene.cs" />
     <Compile Include="GameScenes\Playscenes\Block\Block.cs" />
     <Compile Include="GameScenes\Playscenes\Level\Level.cs" />
@@ -123,10 +125,12 @@
     <Compile Include="Input\Input.cs" />
     <Compile Include="GameScenes\Playscenes\PlayScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
+    <Compile Include="Scorpion\IScorpion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
     <Compile Include="Game\PyramidPanic.cs" />
     <Compile Include="GameScenes\StartScene\StartScene.cs" />
+    <Compile Include="Scorpion\Walkright.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
