--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -111,11 +111,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimatingSprite\AnimatingSprite.cs" />
+    <Compile Include="Beetle\BeetleManager.cs" />
     <Compile Include="Beetle\IBeetle.cs" />
     <Compile Include="Beetle\Beetle.cs" />
     <Compile Include="Beetle\WalkDown.cs" />
     <Compile Include="Beetle\WalkUp.cs" />
-    <Compile Include="IAnimatingSprite.cs" />
+    <Compile Include="AnimatingSprite\IAnimatingSprite.cs" />
     <Compile Include="Scorpion\Walkleft.cs" />
     <Compile Include="Scorpion\Scorpion.cs" />
     <Compile Include="GameScenes\LevelEditorScene\LevelEditorScene.cs" />
