--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -117,7 +117,11 @@
     <Compile Include="GameScenes\Playscenes\Beetle\WalkDown.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\WalkUp.cs" />
     <Compile Include="AnimatingSprite\IAnimatingSprite.cs" />
+    <Compile Include="GameScenes\Playscenes\Player\PlayerDown.cs" />
+    <Compile Include="GameScenes\Playscenes\Player\PlayerUp.cs" />
+    <Compile Include="GameScenes\Playscenes\Player\PlayerLeft.cs" />
     <Compile Include="GameScenes\Playscenes\Player\Player.cs" />
+    <Compile Include="GameScenes\Playscenes\Player\PlayerIdle.cs" />
     <Compile Include="GameScenes\Playscenes\Player\PlayerRight.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\ScorpionManager.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\Walkleft.cs" />
