Treasures kunnen worden op gepakt en geven punten levens of scarabs. foutje in code verbeterd de speler kijkt nu de goede kant op als hij in Idle gaat. als de speler de scorpions en beetles aanraakt dan verliest hij een leven.

--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Game\PyramidPanic.cs" />
     <Compile Include="GameScenes\StartScene\StartScene.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\Walkright.cs" />
+    <Compile Include="GameScenes\Score\Score.cs" />
+    <Compile Include="Treasure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
