--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -117,6 +117,8 @@
     <Compile Include="GameScenes\Playscenes\Beetle\WalkDown.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\WalkUp.cs" />
     <Compile Include="AnimatingSprite\IAnimatingSprite.cs" />
+    <Compile Include="GameScenes\Playscenes\LevelPlay.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelPause.cs" />
     <Compile Include="GameScenes\Playscenes\Player\PlayerDown.cs" />
     <Compile Include="GameScenes\Playscenes\Player\Playermanager.cs" />
     <Compile Include="GameScenes\Playscenes\Player\PlayerUp.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="GameScenes\StartScene\MenuStartScene.cs" />
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
     <Compile Include="IGameState.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\ILevel.cs" />
     <Compile Include="Input\Input.cs" />
     <Compile Include="GameScenes\Playscenes\PlayScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
@@ -147,7 +150,7 @@
     <Compile Include="GameScenes\StartScene\StartScene.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\Walkright.cs" />
     <Compile Include="GameScenes\Score\Score.cs" />
-    <Compile Include="Treasure.cs" />
+    <Compile Include="GameScenes\Playscenes\Treasure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
