--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -144,6 +144,7 @@
     <Compile Include="GameScenes\Playscenes\PlayScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\IScorpion.cs" />
+    <Compile Include="LevelDoorOpen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
     <Compile Include="Game\PyramidPanic.cs" />
