--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -111,13 +111,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimatingSprite\AnimatingSprite.cs" />
+    <Compile Include="GameScenes\GameOverScene\GameOverScene.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\BeetleManager.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\IBeetle.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\Beetle.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\WalkDown.cs" />
     <Compile Include="GameScenes\Playscenes\Beetle\WalkUp.cs" />
     <Compile Include="AnimatingSprite\IAnimatingSprite.cs" />
-    <Compile Include="GameScenes\Playscenes\LevelPlay.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelEndGame.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelPlay.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelNextLevel.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelGameOver.cs" />
     <Compile Include="GameScenes\Playscenes\Level\LevelPause.cs" />
     <Compile Include="GameScenes\Playscenes\Player\PlayerDown.cs" />
     <Compile Include="GameScenes\Playscenes\Player\Playermanager.cs" />
@@ -144,7 +148,7 @@
     <Compile Include="GameScenes\Playscenes\PlayScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
     <Compile Include="GameScenes\Playscenes\Scorpion\IScorpion.cs" />
-    <Compile Include="LevelDoorOpen.cs" />
+    <Compile Include="GameScenes\Playscenes\Level\LevelDoorOpen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
     <Compile Include="Game\PyramidPanic.cs" />
